# mlops2025_HusseinChalhoub

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run_batch_inference_pipeline.py  run_pipeline.py  run_training_pipeline.py
.github/workflows/: ci.yml
config/: config.yaml
scripts/: __init__.py  batch_inference.py  feature_engineering.py  pipeline.py  preprocess.py  train.py
src/ml_project/features/: feature_eng.py
src/ml_project/inference/: inference.py
src/ml_project/pipelines/: pipeline.py
src/ml_project/preprocess/: preprocessor.py
src/ml_project/train/: training.py
tests/: conftest.py  test_batch_inference.py  test_feature_eng.py  test_feature_engineering.py  test_inference.py  test_pipeline.py  test_preprocess.py  test_preprocessor.py  test_train.py  test_training.py
