[project]
name = "ml-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Husseinch24", email = "hussein_chalhoub@hotmail.com" }
]
requires-python = ">=3.12"

dependencies = [
    "joblib>=1.5.3",
    "mlflow>=2.9",
    "numpy>=1.26",
    "omegaconf==2.3.0",
    "pandas>=2.1",
    "pyarrow>=14.0.1",
    "pytest>=8",
    "scikit-learn>=1.3",
    "shap>=0.44",
    "protobuf==3.20.3",
    "googleapis-common-protos==1.60.0",
    "setuptools>=80.9.0",
    "wheel>=0.45.1",
]


[project.scripts]
ml-project = "ml_project:main"

[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"
