[project]
python = "3.11"
name = "ml-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Husseinch24", email = "hussein_chalhoub@hotmail.com" }
]

requires-python = ">=3.9"




dependencies = [
    "googleapis-common-protos>=1.60.0",
    "joblib>=1.5.3",
    "mlflow>=2.16.0",
    "numpy>=1.26.4",
    "omegaconf>=2.3.0",
    "pandas>=2.3.3",
    "protobuf>=3.20.3",
    "pyarrow>=14.0.2",
    "pytest>=8.4.2",
    "scikit-learn>=1.2.2",
    "setuptools<65",
    "shap>=0.49.1",
    "wheel>=0.45.1",
]



[project.scripts]
ml-project = "ml_project:main"

[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"
